# devforge-website

./: .env  Cargo.toml  contact.php  index.html
src/: main.rs
src/handlers/: api.rs  web.rs
static/css/: style.css
static/js/: app.js
templates/: about.html  base.html  contact.html  index.html
