[package]
name = "devforge.in-website"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
